get servers talking

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "game.h": "c",
-        "pipe_networking.h": "c"
+        "pipe_networking.h": "c",
+        "stdio.h": "c"
     }
 }
